# generative-ai-docs

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_MAINTAINERS.md  Makefile  NOTICE  README.md  docker-compose.yml  mkdocs.yml  project.yaml  pyproject.toml
.github/: header-checker-lint.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  notebooks.yml  remove-issue-labels.yml  remove-pr-labels.yml  stale.yml
.reuse/: dep5
LICENSES/: MPL-2.0.txt
assets/: README.md
ci/: README.md
configs/: README.md
configs/python/: requirements.txt
data/: README.md
demos/palm/: README.md
demos/palm/web/list-it/: README.md  dev.yaml  index.html  package.json  vite.config.js
demos/palm/web/mood-food/: CODE_OF_CONDUCT.md  README.md  app.yaml  index.html  package.json  vite.config.js
demos/palm/web/quick-prompt/: README.md  index.html  package.json
demos/palm/web/talking-character/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json
docs/: README.md  index.md
docs/adr/: README.md  template.md
examples/palm/: README.md
infra/: README.md
sbom/: README.md
scripts/: _utils.sh  bootstrap  build  clean  coverage  dev  e2e  fmt  gen-docs  insert_spdx_header.py  lint  migrate  package  release  sbom  security-scan  test  typecheck  update-deps
src/: README.md
tests/: README.md
tests/fixtures/: README.md
tests/unit/: test_repository_structure.py
(+360 files in other folders)
