# SPDX-License-Identifier: MPL-2.0
[project]
name = "generative-ai-docs"
version = "0.1.0"
description = "Documentation and examples for the Generative AI developer site"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["scripts", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
source = ["scripts", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
